# foo-essentials

./: .gitignore  .gitmodules  CMakeLists.txt  README
debian/: changelog  copyright.in  description.in  postinst.sh.in  postrm.sh.in
src/: CMakeLists.txt  fooconfig.h.in  fooinfo.c
